--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,12 +10,12 @@ body {
 /* Navbar */
 .navbar {
     display: unset;
-    background-color: #F5F5F5;
+    background-color: #F6F6F6;
     
 }
 
 #topnav {
-    background-color: #F5F5F5;
+    background-color: #F6F6F6;
 }
 
 /* Style the review dropdown button */
@@ -93,6 +93,14 @@ body {
     height: 50px;
 }
 
+.modal-header {
+    border-bottom: none;
+}
+
+.modal-title {
+    font-weight: 900;
+}
+
 .modal-content {
     background-color:rgb(3, 106, 120);
     color: white;
@@ -127,14 +135,12 @@ input[name='q']::placeholder {
 }
 
 /* products badeges */
-
 a.category-badge > span.badge:hover {
     background: black !important;
     color: white !important;
 }
 
 /* toasts */
-
 .message-container {
     position: fixed;
     top: 72px;
