--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
                     <a class="{% if wishlist_count %} font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_product_wishlist' %}">
                         <div class="text-center">
                             {% if wishlist_count %}
-                                <div><i class="fas fa-heart"></i></div>
+                                <div><i class="fas fa-heart fa-lg"></i></div>
                                 <p class="my-0">
                                     Wishlist ({{ wishlist_count }})
                                 </p>
