--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,7 +38,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: bolder;
     color:white;
-    height: 600px;
+    height: 600px
 }
   
 .home-banner p {
@@ -46,7 +46,7 @@ body {
 }
 
 .home-banner h1 {
-    padding-top: 150px;
+    padding-top: 220px;
 }
 
 .home-banner-image img {
@@ -55,15 +55,15 @@ body {
 }
 
 .btn-black {
-    background: white;
-    color: black;
+    background: #222;
+    color: white;
   }
 
 .btn-black:hover,
 .btn-black:active,
 .btn-black:focus {
-      background: black;
-      color: white;
+      background: white;
+      color: black;
 }
 
 .shop-now-button:hover,
@@ -72,7 +72,7 @@ body {
 .btn-black:hover,
 .btn-black:active,
 .btn-black:focus {
-    background: #222;
+    background: black;
     color: white;
 }
 
