--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="col-12 col-lg-8 d-none d-lg-block home-banner-image mt-5">
         <a href="#">
-          <img src="{{ MEDIA_URL }}media/myhome.jpg" alt="Home banner">
+          <img src="{{ MEDIA_URL }}myhome.jpg" alt="Home banner">
         </a>
       </div>
     </div>
