--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -107,42 +107,42 @@
     <!-- Bedroom -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
       <a href="{% url 'products' %}?category=beds,nightstands,dressers">
-        <img src="media/bed.jpg" class="imagebuttons" alt="Bedroom">
+        <img src="{{ MEDIA_URL }}bed.jpg" class="imagebuttons" alt="Bedroom">
         <p class="mt-2 mb-4">Bedroom</p>
       </a>
     </div>
     <!-- Living room -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
       <a href="{% url 'products' %}?category=sofas,chairs,tables">
-        <img src="media/sofa.jpg" class="imagebuttons" alt="Living room">
+        <img src="{{ MEDIA_URL }}sofa.jpg" class="imagebuttons" alt="Living room">
         <p class="mt-2 mb-4">Living room</p>
       </a>
     </div>
     <!-- Dining room -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
       <a href="{% url 'products' %}?category=dining_chairs,dining_tables,bars">
-        <img src="media/diningroom.jpg" class="imagebuttons" alt="Dining room">
+        <img src="{{ MEDIA_URL }}diningroom.jpg" class="imagebuttons" alt="Dining room">
         <p class="mt-2 mb-4">Dining room</p>
       </a>
     </div>
     <!-- Office -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
       <a href="{% url 'products' %}?category=desks,bookcases,office_chairs">
-        <img src="media/office.jpg" class="imagebuttons" alt="Office">
+        <img src="{{ MEDIA_URL }}office.jpg" class="imagebuttons" alt="Office">
         <p class="mt-2 mb-4">Office</p>
       </a>
     </div>
     <!-- Garden -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
       <a href="{% url 'products' %}?category=garden_tables,garden_chairs,garden_sofas">
-        <img src="media/garden.jpg" class="imagebuttons" alt="Garden">
+        <img src="{{ MEDIA_URL }}garden.jpg" class="imagebuttons" alt="Garden">
         <p class="mt-2 mb-4">Garden</p>
       </a>
     </div>
     <!-- Specials -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
       <a href="#">
-        <img src="media/onsale.jpg" class="imagebuttons" alt="Specials">
+        <img src="{{ MEDIA_URL }}onsale.jpg" class="imagebuttons" alt="Specials">
         <p class="mt-2 mb-4">Specials</p>
       </a>
     </div>
