--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -56,30 +56,28 @@ Bag
                                             <p><strong>Subtotal:
                                                 </strong>${{ item.poduct.price | calc_subtotal:item.quantity }}</p>
                                             {% endif %}
+
                                             <form class="form update-form mb-3" method="POST"
                                                 action="{% url 'adjust_bag' item.item_id %}">
                                                 {% csrf_token %}
-                                                <div class="quantity input-group">
+                                                <div class="input-group input-group-{{ item.item_id }}">
                                                     Qty:
                                                     <div class="input-group-prepend">
-                                                        <button
-                                                            class="decrement-qty btn btn-sm btn-outline-black rounded-0"
+                                                        <button class="decrement-qty btn btn-sm btn-outline-black rounded-0 decrement-qty_{{ item.item_id }} 
+                                                            {% if item.size %}decrement-size_{{ item.item_id }}_{{ item.size }}{% endif %}"
                                                             data-item_id="{{ item.item_id }}"
-                                                            id="decrement-qty_{{ item.item_id }}">
+                                                            data-size="{{ item.size }}">
                                                             <span>
                                                                 <i class="fas fa-minus fa-sm"></i>
                                                             </span>
                                                         </button>
                                                     </div>
-                                                    <input class="qty_input" type="number" name="quantity"
-                                                        value="{{ item.quantity }}" min="1" max="99"
-                                                        data-item_id="{{ item.item_id }}"
-                                                        id="id_qty_{{ item.item_id }}">
+                                                    <input class="form-control form-control-sm qty_input id_qty_{{ item.item_id }}" 
+                                                        type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                                        data-item_id="{{ item.item_id }}">
                                                     <div class="input-group-append">
-                                                        <button
-                                                            class="increment-qty btn btn-sm btn-outline-black rounded-0"
-                                                            data-item_id="{{ item.item_id }}"
-                                                            id="increment-qty_{{ item.item_id }}">
+                                                        <button class="increment-qty btn btn-sm btn-black rounded-0 increment-qty_{{ item.item_id }}"
+                                                            data-item_id="{{ item.item_id }}">
                                                             <span>
                                                                 <i class="fas fa-plus fa-sm"></i>
                                                             </span>
