--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -184,7 +184,7 @@ Bag
     // Update quantity on click
     $('.update-link').click(function (e) {
         var form = $(this).prev('.update-form');
-        form.submit();
+        form[0].requestSubmit();
     })
 
     // Remove item and reload on click
