--- a/static/css/base.css
+++ b/static/css/base.css
@@ -497,6 +497,88 @@ margin: 2rem 0;
     height: auto ;
 }
 
+/* -------------------------------- 404 page */
+/** This template was made by Colorlib  **/
+#notfound {
+    position: relative;
+    height: 100vh;
+  }
+  
+#notfound .notfound {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+.notfound {
+    max-width: 920px;
+    width: 100%;
+    line-height: 1.4;
+    text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  
+.notfound .notfound-404 {
+    position: absolute;
+    height: 100px;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: -1;
+  }
+  
+.notfound .notfound-404 h1 {
+    font-family: 'Maven Pro', sans-serif;
+    color: #ececec;
+    font-weight: 900;
+    font-size: 276px;
+    margin: 0px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+.notfound h2 {
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 46px;
+    color: #000;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin: 0px;
+  }
+  
+.notfound p {
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 16px;
+    color: #000;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-top: 15px;
+  }
+  
+.notfound a {
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 14px;
+    text-decoration: none;
+    text-transform: uppercase;
+    background: none;
+    display: inline-block;
+    padding: 16px 38px;
+    border: 2px solid black;
+    border-radius: 5px;
+    color: black;
+    font-weight: 400;
+    transition: 0.2s all;
+  }
+  
+.notfound a:hover {
+    background-color: #fff;
+    border-color: #bcd4de;
+    color: #bcd4de;
+}
 
 /* -------------------------------- Media Queries */
 @media (min-width: 1200px) {
