--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -68,11 +68,10 @@
         <form class="form mt-3" action="{% url 'add_review' product.pk %}" method="POST">
             {% csrf_token %}
             {{ review_form|crispy }}
-            <button id="submit-review-button" class="btn btn-blue">
+            <button id="submit-review-button" class="btn btn-black mt-3">
                 Submit
             </button>
         </form>
-        <hr>
         {% elif request.user.is_authenticated and review_form == None %}
         <p class="mt-3">You have already reviewed this item!</p>
         <hr>
