--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -28,10 +28,12 @@
                     <div class="modal-body">
                         <form action="{% url 'edit_review' review.pk %}" method="POST" enctype="multipart/form-data">
                             {% csrf_token %}
-                            <label>Title:</label><br />
-                            <input type="text" name="title" value="{{ review.title }}"><br />
-                            <label>Description:</label><br />
-                            <textarea name="description">{{ review.description }}</textarea>
+                            <div>
+                                <label>Title:</label><br />
+                                <input type="text" name="title" value="{{ review.title }}" class="w-100 mt-2 mb-2"><br />
+                                <label>Description:</label><br />
+                                <textarea name="description" rows="10" class="w-100 mt-2 mb-2">{{ review.description }}</textarea>
+                            </div>
                             <button type="button" class="btn btn-secondary mt-3" data-bs-dismiss="modal">Close</button>
                             <button type="submit" class="btn  btn-info mt-3 ml-2">Submit</button>
                         </form>
