--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -85,7 +85,7 @@
             </div>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'products' %}?category=onsale"
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'products' %}?category=all_specials"
                 id="sale-link" aria-haspopup="true" aria-expanded="false">
                 On Sale
             </a>
