--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -180,7 +180,7 @@ Bag
 {{block.super}}
 {% include 'products/includes/quantity_input_script.html' %}
 
-<script type="text/javascript">
+<script>
     // Update quantity on click
     $('.update-link').click(function (e) {
         var form = $(this).prev('.update-form');
