--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -46,6 +46,7 @@
                 <p class="mb-0 mt-3 text-left item-price font-weight-bold">${{product.price }}</p>
                 {% endif %}
                 {{ product.description }}
+                <p class="mt-3"></p>
                 {{ product.dimensions|safe }}
             </div>
             {% if request.user.is_superuser %}
@@ -75,7 +76,6 @@
                                     <button class="increment-qty btn btn-black rounded-0 increment-qty_{{ product.id }}"
                                     data-item_id="{{ product.id }}">
                                             <i class="fas fa-plus"></i>
-                                        </span>
                                     </button>
                                 </div>
                             </div>
