--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -59,7 +59,7 @@
                 {% csrf_token %}
                 <div class="form-row">
                     <div class="col-12">
-                        <p class="mt-3"><strong>Quantity:</strong></p>
+                        <p class="mt-3">Quantity:</p>
                         <div class="form-group w-50">
                             <div class="input-group input-group-{{ product.id }}">
                                 <div class="input-group-prepend">
